[tool.poetry]
name = "questionsbot"
version = "0.1.0"
description = "Бот для вебинаров"
authors = ["Хаустов Александр Дмитриевич <khaustovad@trcont.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "^67.7.1"
pytz = "^2023.3"
django = "3.2.9"
requests = "^2.30.0"
python-dotenv = "^1.0.0"
ipython = "8.5.0"
django-cors-headers = "3.13.0"
django-debug-toolbar = "3.6.0"
whitenoise = "6.2.0"
gunicorn = "20.1.0"
uvicorn = "0.18.3"
psycopg2-binary = "2.9.3"
dj-database-url = "1.0.0"
celery = "5.2.7"
redis = "4.3.4"
django-celery-beat = "2.3.0"
python-telegram-bot = "20.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
